package Ejercicio_04;

public enum TipoMineral {
    PRIMARIO,
    SECUNDARIO
}